Added alt image
Signed-off-by: Sid-Lais <sidlais.ls@gmail.com>

--- a/.github/config.yaml
+++ b/.github/config.yaml
@@ -20,7 +20,7 @@ firstPRMergeComment: >
   <picture>
   <source media="(prefers-color-scheme: dark)" srcset="https://raw.githubusercontent.com/meshery/scoop-bucket/master/.github/assets/images/Meshery-celebration-Dark.svg">
   <source media="(prefers-color-scheme: light)" srcset="https://raw.githubusercontent.com/meshery/scoop-bucket/master/.github/assets/images/Meshery-celebration-Light.svg">
-  <img alt="Meshery Logo" src="">
+  <img alt="Meshery Logo" src="https://raw.githubusercontent.com/meshery/scoop-bucket/master/.github/assets/images/Meshery-celebration-Light.svg">
   </picture>
 
   &nbsp; &#9; &nbsp; &#9;  &nbsp; &#9;  &nbsp; &#9; [Join the community](http://slack.meshery.io), if you haven't yet and please leave a :star: [star on the project](../stargazers). :smile:
